Feat: Implement other endpoints + update API TODO: tests
